creusot/tests/should_fail/prusti/invalid_state/post_logic_expiry.stderr
error[creusot]: 'post can only be used in specifications of program functions
 --> post_logic_expiry.rs:5:16
  |
5 | #[after_expiry('post, result == x)]
  |                ^^^^^

error: aborting due to previous error

